# DocNav-MCP

./: .gitignore  CLAUDE.md  README.md  navigator.py  pyproject.toml  server.py
docnav/: __init__.py  models.py  navigator.py  server.py  tools.py
docnav/processors/: __init__.py  base.py  markdown.py  pdf.py
tests/: __init__.py  run_tests.py  test_document_compass.py  test_integration.py  test_navigator.py  test_pdf.py  test_processors.py  test_report.md
