[project]
name = "docnav-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0.0",
    "mcp[cli]>=1.10.1",
    "pymupdf4llm>=0.0.26",
    "tiktoken>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-anyio>=0.0.0",
]
